# ColBandit

./: .gitignore  MANIFEST.in  NOTICE  README.md  RELEASING.md  index.html  index_old.html  install.sh  pyproject.toml  setup.py
.github/workflows/: build-wheels.yml
colbandit/: __init__.py  core.py
demos/: index_prog.html
demos/exp/: colbandit_scidocs_demo.json  colbandit_scidocs_q10_demo.json  colbandit_scidocs_q16_demo.json  colbandit_scidocs_q3_demo.json  colbandit_scidocs_q6_demo.json  index.json
examples/: bench.py  eval_corpus.py  quickstart.py
hf_space/: README.md  app.py  requirements.txt
native/numkong/: SETUP_MAC.md  setup.py
native/numkong/c/: dispatch_f32.c
native/numkong/include/numkong/: capabilities.h
native/numkong/include/numkong/attention/: sapphireamx.h
native/numkong/include/numkong/cast/: diamond.h  sapphire.h
native/numkong/include/numkong/dot/: diamond.h  sapphire.h
native/numkong/include/numkong/dots/: diamond.h  sapphireamx.h
native/numkong/include/numkong/each/: sapphire.h
native/numkong/include/numkong/maxsim/: haswell.h  neonsdot.h  sapphireamx.h  serial.h
native/numkong/include/numkong/scalar/: sapphire.h
native/numkong/include/numkong/spatial/: diamond.h
native/numkong/include/numkong/spatials/: diamond.h  sapphireamx.h
native/numkong/python/: colbandit.c  maxsim.h  numkong.c
scripts/: run_full_sanity.sh
tests/: test_smoke.py
