[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "colbandit"
version = "0.1.0"
description = "Query-time top-K identification for late-interaction (ColBERT-style) retrieval."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [{ name = "Col-Bandit authors" }]
keywords = ["colbert", "late-interaction", "retrieval", "maxsim", "reranking", "multi-vector"]
dependencies = ["numpy>=1.21", "numkong>=7.3.0"]
# After PyPI publish: `pip install colbandit` pulls the right numkong wheel
# for the user's platform (Linux x86_64, macOS arm64, macOS x86_64, Windows).
# Source builds from this repo still work via `./install.sh`.

[project.optional-dependencies]
torch = ["torch>=1.13"]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["colbandit*"]
