[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "colbandit"
version = "0.1.0"
description = "Query-time top-K identification for late-interaction (ColBERT-style) retrieval."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [{ name = "Col-Bandit authors" }]
keywords = ["colbert", "late-interaction", "retrieval", "maxsim", "reranking", "multi-vector"]
# Self-contained: the C kernel (vendored from upstream NumKong + colbandit_flat)
# is built into colbandit._kernel by setup.py. The only runtime dep is NumPy.
dependencies = ["numpy>=1.21"]

[project.optional-dependencies]
torch = ["torch>=1.13"]
dev = ["pytest>=7"]

[project.urls]
Homepage   = "https://github.com/roipony/ColBandit"
Repository = "https://github.com/roipony/ColBandit"

[tool.setuptools.packages.find]
include = ["colbandit*"]

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-*"
skip  = "pp* *-musllinux* *-win32 *-manylinux_i686"
build-verbosity = 1
# Sanity-check the built wheel on every (OS x arch x Py).
test-requires = ["numpy"]
test-command = 'python -c "from colbandit import ColBandit; import numpy as np; cb=ColBandit().index([np.random.randn(8,16).astype(\"float32\") for _ in range(20)]); cb.search(np.random.randn(4,16).astype(\"float32\"), k=3); print(\"ok\")"'

[tool.cibuildwheel.macos]
before-build = "brew install libomp"
