[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "colbandit"
version = "0.1.0"
description = "Query-time top-K identification for late-interaction (ColBERT-style) retrieval."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [{ name = "Col-Bandit authors" }]
keywords = ["colbert", "late-interaction", "retrieval", "maxsim", "reranking", "multi-vector"]
# Self-contained: the C kernel (vendored from upstream NumKong + colbandit_flat)
# is built into colbandit._kernel by setup.py. The only runtime dep is NumPy.
dependencies = ["numpy>=1.21"]

[project.optional-dependencies]
torch = ["torch>=1.13"]
dev = ["pytest>=7"]

[project.urls]
Homepage   = "https://github.com/roipony/ColBandit"
Repository = "https://github.com/roipony/ColBandit"

[tool.setuptools.packages.find]
include = ["colbandit*"]

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-*"
skip  = "pp* *-musllinux* *-win32 *-manylinux_i686"
build-verbosity = 1
# Sanity-check the built wheel on every (OS x arch x Py).
# Use the real smoke-test file (d=128, the production ColBERT depth the
# SIMD loops are tuned for) — the previous inline d=16 toy did not exercise
# any kernel code path and could mask depth-padding bugs.
test-requires = ["numpy", "pytest"]
test-command = "pytest -q {project}/tests/test_smoke.py"

[tool.cibuildwheel.linux]
# Default manylinux2014 ships GCC 10, whose AVX-512-BW intrinsics
# (_mm512_loadu_epi16, _mm512_loadu_epi8) are mis-declared — they return
# `int` instead of `__m512i`, so NumKong's icelake header fails to compile
# on the Linux runner. manylinux_2_28 has GCC 12 and works correctly, and
# covers Ubuntu 20.04+ / RHEL 8+ / Fedora 33+ — every modern distro.
manylinux-x86_64-image = "manylinux_2_28"
# Disable ISA targets that NumKong's vendored headers don't carry the right
# function-level __attribute__((target(...))) for (their probes pass on
# modern GCC, then GCC refuses to inline the new intrinsic into a caller
# without matching target attrs — "target specific option mismatch").
# We keep Haswell/Skylake/Icelake which cover every PyPI-relevant Intel CPU.
environment = { NK_TARGET_SAPPHIRE = "0", NK_TARGET_SAPPHIREAMX = "0", NK_TARGET_GRANITEAMX = "0", NK_TARGET_GENOA = "0", NK_TARGET_DIAMOND = "0", NK_TARGET_TURIN = "0", NK_TARGET_ALDER = "0", NK_TARGET_SIERRA = "0" }

[tool.cibuildwheel.macos]
# libomp is keg-only on Homebrew, so delocate-wheel won't find it via the default
# loader paths. We expose its lib dir to the repair step via DYLD_LIBRARY_PATH
# (and to the build via LDFLAGS/CPPFLAGS) so the dylib gets bundled into the wheel.
before-build = "brew install libomp"
repair-wheel-command = "DYLD_LIBRARY_PATH=$(brew --prefix libomp)/lib delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"
environment = { MACOSX_DEPLOYMENT_TARGET = "14.0" }
